Completed prep-html-skeleton

--- a/prep-example/index.html
+++ b/prep-example/index.html
@@ -9,7 +9,7 @@
       <!-- write your app ideas here 👇 -->
       Quick bookkeeping app Connecting mothers to post partum care Live connect
       between small business owners and translators Information gathering app
-      for projects - interest connect to resources here's a change
+      for projects - interest connect to resources
     </p>
   </body>
 </html>
