--- a/prep-html-skeleton/index.html
+++ b/prep-html-skeleton/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 
 <html>
-  <title>HTML Skeleton Exercise</title>
+  <head>
+    <title>HTML Skeleton Exercise</title>
+  </head>
 
   <body>
     <h1>I built a proper HTML skeleton!</h1>
